--- a/PythonSQL.ipynb
+++ b/PythonSQL.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# ***Using SQL in Python***\n",
     "\n",
-    "![Data FLow](http://itransfluence.com/wp-content/uploads/2019/04/sql_banner.png)\n",
+    "![Data FLow](sql_python_banner.png)\n",
     "\n",
     "## **Querying SQLite3 from Python** \n",
     "\n",
